Capitalize the Change Password button. (#470)

--- a/gobotany/plantshare/templates/registration/_change_password_form.html
+++ b/gobotany/plantshare/templates/registration/_change_password_form.html
@@ -6,5 +6,5 @@
         {{ form.as_p }}
 
         <p><input type="submit" value="Update Password"
-            class="orange-button"></p>
+            class="orange-button caps"></p>
     </form>
