--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -34,10 +34,10 @@ body.taxa {
     @include shadowbox-photo-titles-credits;
 
     .visit-dkey {
-        margin: 2em 0 0;
-        font-size:  $nav-font-size;
         font-weight: normal;
+        margin-top: 36px;
         a {
+            margin-left: 4px;
             @extend .orange-button;
         }
     }
