Fix bug where italic styles were lost on D. Key buttons.

--- a/gobotany/static/sass/_dkey.scss
+++ b/gobotany/static/sass/_dkey.scss
@@ -204,6 +204,7 @@
         display: inline-block;
         font-size:  $base-font-size;
         font-weight: normal;
+        text-transform: uppercase;
     }
     .image-type-selector {
         display: none;  /* once images are loaded, our JS will un-hide */
