--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1091,7 +1091,7 @@ body.plantshare {
         }
         input[type='password'], input[type='text'] {
             margin-bottom: 10px;
-            width: 250px;
+            width: 250px !important;
         }
     }
 
