--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -56,7 +56,8 @@ a {
         }
     }
 }
-#main p a, #main li > a, #main dt a, #main td a, #main h2 a {
+#main p a, #main li > a, #main dt a, #main td a, #main h2 a, #main form > a,
+#sidebar form > a {
     border-bottom: 1px solid $border-green;
     &:hover {
         border-color: $link-green;
