--- a/gobotany/plantshare/templates/registration/_change_password_form.html
+++ b/gobotany/plantshare/templates/registration/_change_password_form.html
@@ -6,5 +6,7 @@
         {{ form.as_p }}
 
         <p><input type="submit" value="Update Password"
-            class="orange-button caps"></p>
+            class="orange-button caps">
+            <a href="{% url 'ps-forgot-password' %}">Forgot Password</a>
+        </p>
     </form>
